Fix blockquote contrast and list item spacing

--- a/_sass/blog/posts.scss
+++ b/_sass/blog/posts.scss
@@ -10,7 +10,7 @@
     align-items: center;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-around;
     max-width: calc(#{$page-max-width} / 2.5);
 
     a {
